--- a/app/Resources/views/course_info/equipment/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/equipment.html.twig
@@ -1,35 +1,35 @@
 {% extends 'course_info/layout.html.twig' %}
 
 {% block subContent %}
-
-    <div id="card-equipment" class="card my-2 shadow card-syllabus"
-         data-view-url="{{ path('app.course_info.resource_equipment.equipments', {'id': courseInfo.id }) }}"
-    >
-        <div class="card-header">
-            <div class="d-flex justify-content-between">
-                <h3>Matériel</h3>
+    <div class="pt-3">
+        <div id="card-equipment" class="card my-2 shadow card-syllabus"
+             data-view-url="{{ path('app.course_info.resource_equipment.equipments', {'id': courseInfo.id }) }}"
+        >
+            <div class="card-header">
+                <div class="d-flex justify-content-between">
+                    <h3>Matériel</h3>
+                </div>
+            </div>
+            <div class="card-body">
             </div>
         </div>
-        <div class="card-body">
-        </div>
-    </div>
 
-    <div class="card my-2 shadow card-syllabus"
-         data-view-url="{{ path('app.course_info.resource_equipment.resources', {'id': courseInfo.id }) }}"
-         data-form-url="{{ path('app.course_info.resource_equipment.resource.edit', {'id': courseInfo.id }) }}"
-    >
-        <div class="card-header">
-            <div class="d-flex justify-content-between">
-                <h3>Ressources</h3>
-                <button type="button" class="edit-button btn btn-primary rounded">
-                    Mettre à jour
-                </button>
+        <div class="card my-2 shadow card-syllabus"
+             data-view-url="{{ path('app.course_info.resource_equipment.resources', {'id': courseInfo.id }) }}"
+             data-form-url="{{ path('app.course_info.resource_equipment.resource.edit', {'id': courseInfo.id }) }}"
+        >
+            <div class="card-header">
+                <div class="d-flex justify-content-between">
+                    <h3>Ressources</h3>
+                    <button type="button" class="edit-button btn btn-primary rounded">
+                        Mettre à jour
+                    </button>
+                </div>
+            </div>
+            <div class="card-body">
             </div>
         </div>
-        <div class="card-body">
-        </div>
     </div>
-
 {% endblock %}
 
 {% block javascripts %}
