--- a/app/Resources/views/course_info/equipment/view/resource.html.twig
+++ b/app/Resources/views/course_info/equipment/view/resource.html.twig
@@ -5,28 +5,12 @@
                     {% endif %}
                     Ressources pédagogiques
                 </span>
-    {% if courseInfo.educationalResources is null %}
-        <span class="text-warning">
-                                Non-renseigné
-                            </span>
-    {% else %}
-        <span class="text-muted">
-                                {{ courseInfo.educationalResources | purify }}
-                            </span>
-    {% endif %}
+    {{ courseInfo.educationalResources|humanizeEmptyData() | purify }}
     <span class="font-weight-bold">
                     {% if courseInfo.bibliographicResources is null %}
                         <i class="fas fa-exclamation-circle text-warning"></i>
                     {% endif %}
                     Eléments bibliographiques
                 </span>
-    {% if courseInfo.bibliographicResources is null %}
-        <span class="text-warning">
-                                Non-renseigné
-                            </span>
-    {% else %}
-        <span class="text-muted">
-                                {{ courseInfo.bibliographicResources | purify }}
-                            </span>
-    {% endif %}
+    {{ courseInfo.bibliographicResources|humanizeEmptyData() | purify }}
 </div>
