--- a/app/Resources/views/course_info/info/view/info.html.twig
+++ b/app/Resources/views/course_info/info/view/info.html.twig
@@ -5,28 +5,12 @@
                     {% endif %}
                     Informations dont vous disposez sur le calendrier du cours, des examens…
                 </span>
-    {% if courseInfo.agenda is null %}
-        <span class="text-warning">
-                                Non-renseigné
-                            </span>
-    {% else %}
-        <span class="text-muted">
-                                {{ courseInfo.agenda | purify }}
-                            </span>
-    {% endif %}
+    {{ courseInfo.agenda|humanizeEmptyData() | purify }}
     <span class="font-weight-bold">
                     {% if courseInfo.organization is null %}
                         <i class="fas fa-exclamation-circle text-warning"></i>
                     {% endif %}
                     Organisation du cours
                 </span>
-    {% if courseInfo.organization is null %}
-        <span class="text-warning">
-                                Non-renseigné
-                            </span>
-    {% else %}
-        <span class="text-muted">
-                                {{ courseInfo.organization | purify }}
-                            </span>
-    {% endif %}
+    {{ courseInfo.organization|humanizeEmptyData() | purify }}
 </div>
