--- a/app/Resources/views/course_info/objectives_course/view/achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/achievement.html.twig
@@ -7,9 +7,7 @@
                                 <i class="fas fa-exclamation-circle text-danger"></i>
                                 Compétence
                             </span>
-                    <span class="text-danger">
-                                Non-renseigné
-                            </span>
+                    <span class="empty-data">Aucune capacité renseignée</span>
                 </div>
             </div>
         </div>
@@ -22,7 +20,8 @@
             <th class="text-center" style="width: 20%">Modifier/Supprimer</th>
         </tr>
         </thead>
-        <tbody id="achievements-list" class="list-sortable" data-url="{{ path('app.course_info.objectives.sort_achievements', {'id': courseInfo.id}) }}">
+        <tbody id="achievements-list" class="list-sortable"
+               data-url="{{ path('app.course_info.objectives.sort_achievements', {'id': courseInfo.id}) }}">
         {% for achievement in courseInfo.courseAchievements %}
             <tr class="item-sortable" data-id="{{ achievement.id }}">
                 <td class="text-left">{{ achievement.description }}</td>
@@ -46,8 +45,7 @@
 {% endif %}
 
 <script>
-    if ($('#achievements-list').length)
-    {
+    if ($('#achievements-list').length) {
         Syllabus.sortable($('#achievements-list'));
     }
 </script>
