--- a/app/Resources/views/course_info/objectives_course/view/prerequisite.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/prerequisite.html.twig
@@ -8,9 +8,7 @@
                                 <i class="fas fa-exclamation-circle text-danger"></i>
                                 Prérequis
                             </span>
-                    <span class="text-danger">
-                                Non-renseigné
-                            </span>
+                    <span class="empty-data">Aucun prérequis renseigné</span>
                 </div>
             </div>
         </div>
