--- a/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
@@ -48,9 +48,7 @@
                                 <i class="fas fa-exclamation-circle text-danger"></i>
                                 Remédiation
                             </span>
-                    <span class="text-danger">
-                                Non-renseigné
-                            </span>
+                    <span class="empty-data">Aucune remédiation renseignée</span>
                 </div>
             </div>
         </div>
