--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -18,6 +18,7 @@
     {% include 'course_info/view/student_evaluation.html.twig' %}
     {% include 'course_info/view/student_equipments.html.twig' %}
     {% include 'course_info/view/student_info.html.twig' %}
+    {% include 'course_info/view/student_closing_remarks.html.twig' %}
 {% endblock %}
 
 {% block javascripts %}
