added "student view" in sidebar

--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -252,6 +252,11 @@ li.active{
     background-color: $primary;
 }
 
+li.sidebar-footer {
+    bottom: 10px;
+    position: fixed;
+}
+
 /*
     Activities tab
  */
