--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -18,7 +18,7 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column user-panel" data-widget="treeview" role="menu"
                 data-accordion="false">
-                <li class="nav-item has-treeview">
+                <li class="nav-item">
                     <a class="nav-link menu-tab"
                        href="{{ path('app.course_info.dashboard.index', { 'id': courseInfo.id }) }}"
                        id="menu-dashboard">
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 {% if is_granted('ROLE_ADMIN') %}
-                    <li class="nav-item has-treeview">
+                    <li class="nav-item">
                         <a class="nav-link menu-tab"
                            href="{{ path('app.course_info.permission.index', { 'id': courseInfo.id }) }}"
                            id="menu-dashboard">
@@ -40,7 +40,7 @@
         </nav>
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <li class="nav-item has-treeview">
+                <li class="nav-item">
                     <a class="nav-link menu-tab"
                        href="{{ path('app.course_info.presentation.index', { 'id': courseInfo.id }) }}"
                        id="menu-presentation">
@@ -48,7 +48,7 @@
                         <p>{{ 'app.sidebar.presentation' | trans }}</p>
                     </a>
                 </li>
-                <li class="nav-item has-treeview">
+                <li class="nav-item">
                     <a class="nav-link menu-tab"
                        id="menu-activities"
                        href="{{ path('app.course_info.activities.index', { 'id': courseInfo.id }) }}">
@@ -56,7 +56,7 @@
                         <p>{{ 'app.sidebar.activities' | trans }}</p>
                     </a>
                 </li>
-                <li class="nav-item has-treeview">
+                <li class="nav-item">
                     <a class="nav-link menu-tab"
                        id="menu-objectives-course"
                        href="{{ path('app.course_info.objectives.index', { 'id': courseInfo.id }) }}">
@@ -64,7 +64,15 @@
                         <p>{{ 'app.sidebar.objectives' | trans }}</p>
                     </a>
                 </li>
-                <li class="nav-item has-treeview">
+                <li class="nav-item">
+                    <a class="nav-link menu-tab"
+                       id="menu-prerequisites-course"
+                       href="{{ path('app.course_info.prerequisites.index', { 'id': courseInfo.id }) }}">
+                        <i class="fas fa-key"></i>
+                        <p>{{ 'app.sidebar.prerequisites' | trans }}</p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link menu-tab"
                        id="menu-evaluation"
                        href="{{ path('app.course_info.evaluation.index', { 'id': courseInfo.id }) }}">
@@ -72,7 +80,7 @@
                         <p>{{ 'app.sidebar.evaluation' | trans }}</p>
                     </a>
                 </li>
-                <li class="nav-item menu-tab has-treeview">
+                <li class="nav-item menu-tab">
                     <a class="nav-link"
                        id="menu-resource"
                        href="{{ path('app.course_info.resource_equipment.index', { 'id': courseInfo.id }) }}">
@@ -80,21 +88,21 @@
                         <p>{{ 'app.sidebar.equipment' | trans }}</p>
                     </a>
                 </li>
-                <li class="nav-item menu-tab has-treeview">
+                <li class="nav-item menu-tab">
                     <a class="nav-link" href="{{ path('app.course_info.info.index', { 'id': courseInfo.id }) }}"
                        id="menu-info">
                         <i class="fas fa-info-circle"></i>
                         <p>{{ 'app.sidebar.info' | trans }}</p>
                     </a>
                 </li>
-                <li class="nav-item menu-tab has-treeview">
+                <li class="nav-item menu-tab">
                     <a class="nav-link" href="{{ path('app.course_info.closing_remarks.index', { 'id': courseInfo.id }) }}"
                        id="menu-closing_remarks">
                         <i class="fas fa-flag-checkered"></i>
                         <p>{{ 'app.sidebar.closing_remarks' | trans }}</p>
                     </a>
                 </li>
-                <li class="nav-item menu-tab has-treeview sidebar-footer">
+                <li class="nav-item menu-tab sidebar-footer">
                     <a class="nav-link" href="{{ path('app.course_info.view.student', { 'id': courseInfo.id }) }}"
                        id="menu-closing_remarks">
                         <i class="fas fa-user-graduate"></i>
