--- a/app/Resources/views/base_homepage.html.twig
+++ b/app/Resources/views/base_homepage.html.twig
@@ -10,7 +10,7 @@
         </a>
         {% block sidebar %}{% endblock %}
     </aside>
-    <div class="content-wrapper">
+    <div class="content-wrapper bg-dark">
         {% block content %}{% endblock %}
     </div>
     <footer class="main-footer">
