level crud done

--- a/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
+++ b/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
@@ -82,6 +82,9 @@
                         <input type="checkbox" id="btn_duplicate" checked data-toggle="toggle" data-onstyle="primary"
                                data-on="Oui"
                                data-off="Non">
+                        <button type="button" class="btn btn-primary ml-5" data-toggle="modal" data-target="#courseInfoDuplicationModal" data-code-year="{{ courseInfo.codeYear(true) }}">
+                            Dupliquer les infos
+                        </button>
                     </div>
                 </div>
             </div>
