--- a/app/Resources/views/course_info/dashboard/dashboard.html.twig
+++ b/app/Resources/views/course_info/dashboard/dashboard.html.twig
@@ -1,4 +1,32 @@
 {% extends 'course_info/layout.html.twig' %}
+{% block modals %}
+    {{ parent() }}
+    <div class="modal modal-initialized fade" id="courseInfoDuplicationModal" style="display: none;" aria-hidden="true" data-show="{{ isFormValid ? "false" : "true" }}">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Vers quel syllabus voulez-vous dupliquer le contenu?</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                {{ form_start(duplicationForm) }}
+                <div class="modal-body">
+                    {{ form_errors(duplicationForm) }}
+                    {{ form_label(duplicationForm.to) }}
+                    {{ form_widget(duplicationForm.to) }}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+                    <button type="submit" class="btn btn-primary">Dupliquer</button>
+                </div>
+                {{ form_end(duplicationForm) }}
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+{% endblock %}
 {% block subContent %}
     <div id="card-dashboard" class="card my-2 shadow card-syllabus"
          data-view-url="{{ path('app.course_info.dashboard.dashboard', {'id': courseInfo.id }) }}"
