--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -39,7 +39,7 @@
 
         {% set referentielLink = ['app.admin.activity.', 'app.admin.activity_type.', 'app.admin.activity_mode.','app.admin.year.',
             'app.admin.equipment', 'app.admin.structure.', 'app.admin.domain.', 'app.admin.period.index', 'app.admin.language.',
-            'app.admin.campus.', 'app.admin.critical_achievement.'] %}
+            'app.admin.campus.', 'app.admin.critical_achievement.', 'app.admin.level.'] %}
         {% if is_granted(['ROLE_ADMIN_ACTIVITY', 'ROLE_ADMIN_ACTIVITYTYPE', 'ROLE_ADMIN_ACTIVITYMODE', 'ROLE_ADMIN_CAMPUS',
             'ROLE_ADMIN_DOMAIN', 'ROLE_ADMIN_EQUIPMENT', 'ROLE_ADMIN_LANGUAGE', 'ROLE_ADMIN_PERIOD', 'ROLE_ADMIN_STRUCTURE'
         ]) %}
@@ -167,6 +167,18 @@
                                 <i class="fas fa-language nav-icon"></i>
                                 <p>
                                     Langues
+                                </p>
+                            </a>
+                        </li>
+                    {% endif %}
+
+                    {% if is_granted('ROLE_ADMIN_LEVEL') %}
+                        <li class="nav-item pl-2">
+                            <a href="{{ path('app.admin.level.index') }}"
+                               class="nav-link {{ printActiveAdminSidebarLink(['app.admin.level.']) }}">
+                                <i class="fas fa-layer-group nav-icon"></i>
+                                <p>
+                                    Niveaux
                                 </p>
                             </a>
                         </li>
