dark-theme presentation + activities

--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -611,3 +611,14 @@ $break: 400px;
         transition: all .2s linear;
     }
 }
+
+/*
+   Student view
+ */
+
+.horizontal-separator {
+    height: 10px;
+    /*min-width: calc(100vw - 17px);
+    position: absolute;
+    left: 0;*/
+}
