--- a/app/Resources/views/course_info/presentation/view/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/view/teaching_mode.html.twig
@@ -55,6 +55,7 @@
             <div class="col">
                 <h5 class="text-shadow">{{ 'app.presentation.form.teaching_mode.distant' | trans }}</h5>
             </div>
+        </div>
         <div class="row">
             <div class="col">
                 <div class="row">
