--- a/app/Resources/views/course_info/view/dark_student_activities.html.twig
+++ b/app/Resources/views/course_info/view/dark_student_activities.html.twig
@@ -1,6 +1,10 @@
+<h3 class="text-shadow mt-5">{{ 'app.view.student.activities.label' | trans   }}</h3>
+<hr class="bg-dark horizontal-separator">
 {% for section in courseInfo.courseSections %}
-    <hr class="bg-dark" style="height: 10px">
     {% if section.courseSectionActivities is not empty %}
+        {% if not loop.first %}
+            <hr class="bg-dark horizontal-separator" style="height: 5px;">
+        {% endif %}
         <div class="row">
             <h4 class="text-shadow">{{ section.title }}</h4>
             <table class="table table-dark">
@@ -21,7 +25,7 @@
                         <td class="text-left">{{ sectionActivity.activityMode }}</td>
                         <td class="text-center">
                             {% if sectionActivity.evaluable %}
-                                <span class="badge badge-primary rounded">{{ (sectionActivity.evaluationCt ? 'ct' : 'cc') | trans }}</span>
+                                <span class="badge badge-danger rounded">{{ (sectionActivity.evaluationCt ? 'ct' : 'cc') | trans }}</span>
                             {% endif %}
                         </td>
                         <td class="text-center">{{ sectionActivity.evaluationRate }}</td>
