--- a/app/Resources/views/course_info/view/dark_student_presentation.html.twig
+++ b/app/Resources/views/course_info/view/dark_student_presentation.html.twig
@@ -1,5 +1,7 @@
+<h3 class="text-shadow">{{ 'app.view.student.presentation.label' | trans   }}</h3>
+<hr class="bg-dark horizontal-separator">
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md">
         <dl>
             <dt>{{ 'app.presentation.view.general.level' | trans }}</dt>
             <dd class="mandatory-data">{{ courseInfo.level|humanizeEmptyData(null, 'app.const.level.')}}</dd>
@@ -18,7 +20,10 @@
         {% endif %}
         {% if courseInfo.campuses is not empty %}
             <dl>
-                <dt>{{ 'app.presentation.view.general.campus' | trans }}</dt>
+                <dt>
+                    <i class="fas fa-map-marker-alt nav-icon"></i>
+                    {{ 'app.presentation.view.general.campus' | trans }}
+                </dt>
                 <dd>
                     {% set campuses = "" %}
                     {% for campus in courseInfo.campuses %}
@@ -29,8 +34,8 @@
             </dl>
         {% endif %}
     </div>
-    <div class="col-md-6">
-        <dl>
+    <div class="col-md border-left">
+        <dl class="ml-3">
             <dt>{{ 'app.presentation.view.general.domain' | trans }}</dt>
             <dd class="mandatory-data">
                 {% set domains = "" %}
@@ -41,7 +46,7 @@
             </dd>
         </dl>
         {% if courseInfo.languages is not empty %}
-            <dl>
+            <dl class="ml-3">
                 <dt>{{ 'app.presentation.view.general.languages' | trans }}</dt>
                 <dd>
                     {% set languages = "" %}
@@ -53,9 +58,25 @@
             </dl>
         {% endif %}
     </div>
+    <div class="col-md border-left">
+        <dl class="ml-3">
+            <dt>{{ 'app.view.student.presentation.ecue' | trans }}</dt>
+            <dd>
+                {{ courseInfo.course.title }} (TBD)
+            </dd>
+        </dl>
+        <dl class="ml-3">
+            <dd>
+                {{ 'app.view.student.presentation.ue_include' | trans }} <strong>{{ courseInfo.course.children|length }} (TBD)</strong> ECUE
+            </dd>
+            <dd>
+                {{ 'app.view.student.presentation.ue_giving' | trans }} <strong>(TBD)</strong> ECTS
+            </dd>
+        </dl>
+    </div>
 </div>
 {% if courseInfo.image is not null or courseInfo.video is not null %}
-    <div class="row">
+    <div class="row mt-2">
         <div class="col-md-6">
             {% if courseInfo.mediaType == 'image' and courseInfo.image is not null %}
                 {% set imgSrc = courseInfo.image | split('/') | last %}
@@ -77,7 +98,8 @@
         {% endif %}
     </div>
 {% endif %}
-<div class="row mt-2">
+<div class="row mt-3">
+    <h4 class="text-shadow">{{ 'app.presentation.view.teachers.label' | trans   }}</h4>
     <div class="table-responsive">
         <table class="table table-dark">
             <thead>
@@ -108,4 +130,8 @@
             </tbody>
         </table>
     </div>
+</div>
+
+<div>
+    {% include 'course_info/presentation/view/teaching_mode.html.twig' with {'darkCard': 'bg-dark'} %}
 </div>
