--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -14,6 +14,7 @@
 {% block content %}
     <div class="container-fluid p-4" style="background-color: black">
         {% include 'course_info/view/dark_student_presentation.html.twig' %}
+        {% include 'course_info/view/dark_student_objectives.html.twig' %}
         {% include 'course_info/view/dark_student_activities.html.twig' %}
     </div>
     {#    {% include 'course_info/view/student_objectives.html.twig' %}
